--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starter-express-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is the simplest possible nodejs api using express that responds to any request with:  ``` Yo! ```",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2"
   }
 }
