--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "googleapis": "^39.2.0",
+    "node-fetch": "^3.3.1",
     "uuid": "^9.0.0"
   }
 }
