--- a/package.json
+++ b/package.json
@@ -1,26 +1,1 @@
-{ 
-  "name": "starter-express-api",
-  "version": "1.0.0",
-  "description": "This is the simplest possible nodejs api using express that responds to any request with:  ``` Yo! ```",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cyclic-software/starter-express-api/issues"
-  },
-  "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
-  "dependencies": {
-    "axios": "^1.4.0",
-    "express": "^4.18.2",
-    "googleapis": "^39.2.0",
-    "node-fetch": "^3.3.1",
-    "uuid": "^9.0.0"
-  }
-}
+{"name":"starter-express-api","version":"1.0.0","description":"This is the simplest possible nodejs api using express that responds to any request with:  ``` Yo! ```","main":"index.js","scripts":{"start":"node index.js"},"repository":{"type":"git","url":"git+https://github.com/cyclic-software/starter-express-api.git"},"author":"","license":"ISC","bugs":{"url":"https://github.com/cyclic-software/starter-express-api/issues"},"homepage":"https://github.com/cyclic-software/starter-express-api#readme","dependencies":{"axios":"^1.4.0","express":"^4.18.2","googleapis":"^39.2.0","node-fetch":"^2.6.6","uuid":"^9.0.0"}}
